# repairloop

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  PRE_PUBLISH_CHECKLIST.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
demo/: broken_import.py  broken_syntax.py  missing_file.py
docs/: benchmark-plan.md  technical-overview.md
lobster_ai_system/: __init__.py  apply_engine.py  cli.py  fix_engine.py
lobster_ai_system/ai/: __init__.py
lobster_ai_system/core/: __init__.py  apply_engine.py  fix_engine.py
scripts/: make_demo_video.ps1  make_social_preview.ps1
tests/: test_ai_layer.py  test_apply_engine.py  test_cli.py  test_fix_engine.py
