[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-ai-system"
version = "0.1.0"
description = "Local-first automatic code repair tool for Python runtime errors"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Lobster AI System Contributors" }]
keywords = ["code-repair", "debugging", "automation", "python", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lobster-ai = "lobster_ai_system.cli:main"

[tool.setuptools.packages.find]
include = ["lobster_ai_system*"]
exclude = ["demo*", "tests*"]
